<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="employee"
            type="com.example.employeeandroomapp.models.Employee"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginEnd="40dp"
                    android:id="@+id/imageView"
                    app:imageUrl="@{employee.imgUrl}"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/employee_photo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        tools:text="@string/title"
                        android:text="@{employee.firstName}"
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@{employee.firstName}"
                        />

                    <TextView
                        android:textSize="15sp"
                        tools:text="@string/number"
                        android:text="@{employee.phone}"
                        android:id="@+id/textNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@{employee.phone}"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
