<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="employee"
            type="com.example.employeeandroomapp.models.Employee" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        app:cardElevation="0dp">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/imageViewDetails"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            app:civ_border_color="#FF000000"
                            app:imageUrl="@{employee.imgUrl}"
                            tools:src="@tools:sample/avatars"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/employee_photo"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:textColor="#000"
                            android:id="@+id/detailsFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@{employee.firstName.concat(@string/space).concat(employee.lastName)}"
                            tools:text="@string/first_name"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:contentDescription="@{employee.firstName}"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:textColor="#000"
                            android:id="@+id/jobTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@{employee.jobTitle}"
                            tools:text="@string/last_name"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:contentDescription="@{employee.jobTitle}"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:textColor="#000"
                            android:id="@+id/detailsMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@{employee.phone}"
                            android:textAlignment="center"
                            tools:text="@string/mobile_number"
                            android:textSize="30dp"
                            android:contentDescription="@{employee.phone}"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:textColor="#000"
                            android:id="@+id/detailsEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@{employee.email}"
                            android:textAlignment="center"
                            tools:text="@string/email"
                            android:textSize="30dp"
                            android:contentDescription="@{employee.email}"/>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>
</layout>